renamed /handlers/* -> /httpapi
